# fast_od_rpi

./: README.md
benchmarking_tests/: README.md  compilation_instructions.txt  makefile
benchmarking_tests/python/: inference_invoke_time.py
benchmarking_tests/src/: lce_minimal_imagein.cc  lce_minimal_noinput.cc  minimal_imagein.cc  minimal_noinput.cc  minimal_noinput_larq.cc  tflite_minimal_noinput.cc
decoder/: bb_drawer  bb_drawer.cpp  silicon_y_pred_raw.txt  vec_tester
final_pipeline/: CMakeLists.txt  liveSSD_pipeline.cpp
inference_cpp/: BUILD  Makefile
inference_cpp/lib/: BUILD  decode_detections.cpp  decode_detections.hpp
inference_cpp/src/: BUILD  inference_camera.cpp  inference_dataset.cpp  inference_video.cpp  inference_vocp_standardized_larq.cpp
models_trained/: lce_ssd7_bireal.tflite  quicknet_larq.tflite  quicknet_larq2.tflite
trial_pipeline/: CMakeLists.txt  liveSSD_pipeline.cpp
