cmake_minimum_required (VERSION 2.8)
project (final_pipeline)
list(APPEND CMAKE_MODULE_PATH "/home/pi/Documents/EEE190/raspicam-0.1.6/build")
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
set(RPI_TFLITE_LIBPATH "/home/pi/Documents/EEE190/tensorflow/tensorflow/lite/tools/make/gen/rpi_armv7l/lib/libtensorflow-lite.a")
MESSAGE(STATUS "COMPILING OPENCV TESTS")
add_executable (liveSSD_pipeline liveSSD_pipeline.cpp)
target_link_libraries (liveSSD_pipeline ${raspicam_CV_LIBS} ${RPI_TFLITE_LIBPATH})
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
